// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SegmentedControl /> > ControlledSegmentedControl story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List C"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > Default story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > LabelOnly story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="Explorer"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="explorer"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-x16u66-StyledToggleButtonLabel enkxsnk0"
      >
        Explorer
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="All Data"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="all-data"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-x16u66-StyledToggleButtonLabel enkxsnk0"
      >
        All Data
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > LabelOnlyWithDisabledButton story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="Explorer"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="explorer"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-x16u66-StyledToggleButtonLabel enkxsnk0"
      >
        Explorer
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="All Data"
    aria-pressed="false"
    class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-149gn22-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    disabled=""
    tabindex="-1"
    type="button"
    value="all-data"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-x16u66-StyledToggleButtonLabel enkxsnk0"
      >
        All Data
      </div>
    </span>
  </button>
  <button
    aria-label="Summary"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="summary"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-x16u66-StyledToggleButtonLabel enkxsnk0"
      >
        Summary
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > WithCustomTooltipProps story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconTableSmall"
            data-testid="IconTableSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="People View"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconPeopleSmall"
            data-testid="IconPeopleSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > WithDisabledButton story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="List A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconLinesHorizontal3Small"
            data-testid="IconLinesHorizontal3Small"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List B"
    aria-pressed="false"
    class="MuiButtonBase-root Mui-disabled MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-disabled MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-149gn22-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    disabled=""
    tabindex="-1"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconLinesHorizontal3Small"
            data-testid="IconLinesHorizontal3Small"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
  </button>
  <button
    aria-label="List C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconLinesHorizontal3Small"
            data-testid="IconLinesHorizontal3Small"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="List D"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="D"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconLinesHorizontal3Small"
            data-testid="IconLinesHorizontal3Small"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`<SegmentedControl /> > WithTooltipHidden story renders snapshot 1`] = `
<div
  aria-label="Segmented Control"
  class="MuiToggleButtonGroup-root enkxsnk3 css-2re7dg-MuiToggleButtonGroup-root-StyledSegmentedControl"
  role="group"
>
  <button
    aria-label="A"
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-firstButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    tabindex="0"
    type="button"
    value="A"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconListSmall"
            data-testid="IconListSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="B"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-middleButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    tabindex="0"
    type="button"
    value="B"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconTableSmall"
            data-testid="IconTableSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
  <button
    aria-label="C"
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard enkxsnk2 MuiToggleButtonGroup-lastButton css-1kggs28-MuiButtonBase-root-MuiToggleButton-root-StyledToggleButton"
    data-mui-internal-clone-element="true"
    tabindex="0"
    type="button"
    value="C"
  >
    <span
      tabindex="-1"
    >
      <div
        class="css-azgjuf-StyledToggleButtonIcon enkxsnk1"
      >
        <div
          class="css-1q8yjse-StyledIcon emi0zh40"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emi0zh41 css-1rowxxw-MuiSvgIcon-root-StyledSvgIcon-StyledSvgIcon"
            data-file-name="IconPeopleSmall"
            data-testid="IconPeopleSmall"
            fillcontrast="white"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          />
        </div>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
    />
  </button>
</div>
`;
